Fix the spacing in the image caption

--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ h2, img {
   color: #5d8432;
 }
 
-nav li {
+li {
   font-weight: bold;
   font-size: 1.125rem;
   list-style-type: none;
@@ -19,6 +19,7 @@ nav li {
 
 li :hover {
   color: #b42885;
+  text-decoration: underline;
 }
 
 h2, nav {
@@ -28,9 +29,19 @@ h2, nav {
 figure {
   font-style: italic;
   text-align: center;
-  font-size: 1rem;
+  font-size: .8rem;
+  line-height: 1.5625;
 }
 
 .something {
-  font-size: 1.125rem;
+  font-size: 1rem;
+}
+
+h2 {
+  text-transform: uppercase;
+}
+
+a {
+  text-decoration: none;
+  color: #793284;
 }
